--- a/src/main/webapp/pages/department-detail.html
+++ b/src/main/webapp/pages/department-detail.html
@@ -22,8 +22,8 @@
         <li class="submenu active open">
             <a href="#"><i class="icon icon-th-list"></i> <span>部门管理</span></a>
             <ul>
-                <li class="active"><a>部门概览</a></li>
-                <li><a href="department-detail.html">部门明细</a></li>
+                <li><a href="department-overview.html">部门概览</a></li>
+                <li class="active"><a>部门明细</a></li>
             </ul>
         </li>
         <li class="submenu">
@@ -60,9 +60,8 @@
 
 <div id="content">
     <div id="content-header">
-        <h1>部门概览</h1>
+        <h1>部门明细</h1>
     </div>
-    <div id="tree"></div>
 </div>
 
 
@@ -76,50 +75,5 @@
 <script src="js/unicorn.js"></script>
 <script src="js/unicorn.dashboard.js"></script>
 <script src="js/bootstrap-treeview.min.js"></script>
-<script>
-    function getData() {
-        var data = [
-            {
-                text: "Parent 1",
-                nodes: [
-                    {
-                        text: "Child 1",
-                        nodes: [
-                            {
-                                text: "Grandchild 1"
-                            },
-                            {
-                                text: "Grandchild 2"
-                            }
-                        ]
-                    },
-                    {
-                        text: "Child 2"
-                    }
-                ]
-            },
-            {
-                text: "Parent 2"
-            },
-            {
-                text: "Parent 3"
-            },
-            {
-                text: "Parent 4"
-            },
-            {
-                text: "Parent 5"
-            }
-        ];
-        return data;
-    }
-    $('#tree').treeview({data: getData(),
-        expandIcon: "glyphicon glyphicon-plus",
-        collapseIcon:"glyphicon glyphicon-minus",
-        nodeIcon:"glyphicon glyphicon-user",
-        enableLinks: true,
-        onhoverColor:"#428bca"
-    });
-</script>
 </body>
 </html>
