--- a/src/main/webapp/pages/department-detail.html
+++ b/src/main/webapp/pages/department-detail.html
@@ -67,7 +67,7 @@
 
 <script src="js/excanvas.min.js"></script>
 <script src="js/jquery-3.1.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap-3.3.7.min.js"></script>
 <script src="js/jquery.flot.min.js"></script>
 <script src="js/jquery.flot.resize.min.js"></script>
 <script src="js/jquery.peity.min.js"></script>
