登录注册前端制作

--- a/src/main/webapp/pages/buttons.html
+++ b/src/main/webapp/pages/buttons.html
@@ -607,9 +607,9 @@
 		
 		
             
-            <script src="js/jquery.min.js"></script>
+            <script src="js/lib/jquery.min.js"></script>
             <script src="js/jquery.ui.custom.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/unicorn.js"></script>
+            <script src="js/lib/bootstrap.min.js"></script>
+            <script src="js/lib/unicorn.js"></script>
 	</body>
 </html>
