--- a/src/main/webapp/pages/calendar.html
+++ b/src/main/webapp/pages/calendar.html
@@ -153,11 +153,11 @@
 		
 		
             
-            <script src="js/jquery.min.js"></script>
-            <script src="js/jquery-ui.custom.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/fullcalendar.min.js"></script>
-            <script src="js/unicorn.js"></script>
-            <script src="js/unicorn.calendar.js"></script>
+            <script src="js/lib/jquery.min.js"></script>
+            <script src="js/lib/jquery-ui.custom.js"></script>
+            <script src="js/lib/bootstrap.min.js"></script>
+            <script src="js/lib/fullcalendar.min.js"></script>
+            <script src="js/lib/unicorn.js"></script>
+            <script src="js/lib/unicorn.calendar.js"></script>
 	</body>
 </html>
