--- a/src/main/webapp/pages/charts.html
+++ b/src/main/webapp/pages/charts.html
@@ -301,14 +301,14 @@
 		</div>
 		
 		
-            <script src="js/excanvas.min.js"></script>
-            <script src="js/jquery.min.js"></script>
+            <script src="js/lib/excanvas.min.js"></script>
+            <script src="js/lib/jquery.min.js"></script>
             <script src="js/jquery.ui.custom.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/jquery.flot.min.js"></script>
-            <script src="js/jquery.flot.pie.min.js"></script>
-            <script src="js/jquery.flot.resize.min.js"></script>
-            <script src="js/unicorn.js"></script>
-            <script src="js/unicorn.charts.js"></script>
+            <script src="js/lib/bootstrap.min.js"></script>
+            <script src="js/lib/jquery.flot.min.js"></script>
+            <script src="js/lib/jquery.flot.pie.min.js"></script>
+            <script src="js/lib/jquery.flot.resize.min.js"></script>
+            <script src="js/lib/unicorn.js"></script>
+            <script src="js/lib/unicorn.charts.js"></script>
 	</body>
 </html>
