--- a/src/main/webapp/pages/form-common.html
+++ b/src/main/webapp/pages/form-common.html
@@ -247,14 +247,14 @@
 		
 		
             
-            <script src="js/jquery.min.js"></script>
+            <script src="js/lib/jquery.min.js"></script>
             <script src="js/jquery.ui.custom.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/bootstrap-colorpicker.js"></script>
-            <script src="js/bootstrap-datepicker.js"></script>
-            <script src="js/jquery.uniform.js"></script>
-            <script src="js/select2.min.js"></script>
-            <script src="js/unicorn.js"></script>
-            <script src="js/unicorn.form_common.js"></script>
+            <script src="js/lib/bootstrap.min.js"></script>
+            <script src="js/lib/bootstrap-colorpicker.js"></script>
+            <script src="js/lib/bootstrap-datepicker.js"></script>
+            <script src="js/lib/jquery.uniform.js"></script>
+            <script src="js/lib/select2.min.js"></script>
+            <script src="js/lib/unicorn.js"></script>
+            <script src="js/lib/unicorn.form_common.js"></script>
 	</body>
 </html>
