--- a/src/main/webapp/pages/form-validation.html
+++ b/src/main/webapp/pages/form-validation.html
@@ -220,13 +220,13 @@
 		
 		
             
-            <script src="js/jquery.min.js"></script>
+            <script src="js/lib/jquery.min.js"></script>
             <script src="js/jquery.ui.custom.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/jquery.uniform.js"></script>
-            <script src="js/select2.min.js"></script>
-            <script src="js/jquery.validate.js"></script>
-            <script src="js/unicorn.js"></script>
-            <script src="js/unicorn.form_validation.js"></script>
+            <script src="js/lib/bootstrap.min.js"></script>
+            <script src="js/lib/jquery.uniform.js"></script>
+            <script src="js/lib/select2.min.js"></script>
+            <script src="js/lib/jquery.validate.js"></script>
+            <script src="js/lib/unicorn.js"></script>
+            <script src="js/lib/unicorn.form_validation.js"></script>
 	</body>
 </html>
