--- a/src/main/webapp/pages/interface.html
+++ b/src/main/webapp/pages/interface.html
@@ -865,12 +865,12 @@
 		
 		
             
-            <script src="js/jquery.min.js"></script>
-            <script src="js/jquery-ui.custom.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/jquery.gritter.min.js"></script>
-            <script src="js/jquery.peity.min.js"></script>
-            <script src="js/unicorn.js"></script>
-            <script src="js/unicorn.interface.js"></script>
+            <script src="js/lib/jquery.min.js"></script>
+            <script src="js/lib/jquery-ui.custom.js"></script>
+            <script src="js/lib/bootstrap.min.js"></script>
+            <script src="js/lib/jquery.gritter.min.js"></script>
+            <script src="js/lib/jquery.peity.min.js"></script>
+            <script src="js/lib/unicorn.js"></script>
+            <script src="js/lib/unicorn.interface.js"></script>
 	</body>
 </html>
