--- a/src/main/webapp/pages/tables.html
+++ b/src/main/webapp/pages/tables.html
@@ -668,13 +668,13 @@
 		
 		
             
-            <script src="js/jquery.min.js"></script>
+            <script src="js/lib/jquery.min.js"></script>
             <script src="js/jquery.ui.custom.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/jquery.uniform.js"></script>
-            <script src="js/select2.min.js"></script>
-            <script src="js/jquery.dataTables.min.js"></script>
-            <script src="js/unicorn.js"></script>
-            <script src="js/unicorn.tables.js"></script>
+            <script src="js/lib/bootstrap.min.js"></script>
+            <script src="js/lib/jquery.uniform.js"></script>
+            <script src="js/lib/select2.min.js"></script>
+            <script src="js/lib/jquery.dataTables.min.js"></script>
+            <script src="js/lib/unicorn.js"></script>
+            <script src="js/lib/unicorn.tables.js"></script>
 	</body>
 </html>
