--- a/src/main/webapp/pages/chat.html
+++ b/src/main/webapp/pages/chat.html
@@ -145,10 +145,10 @@
 			</div>
 		</div>
 
-            <script src="js/jquery.min.js"></script>
+            <script src="js/lib/jquery.min.js"></script>
             <script src="js/jquery.ui.custom.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/unicorn.js"></script>
-            <script src="js/unicorn.chat.js"></script>
+            <script src="js/lib/bootstrap.min.js"></script>
+            <script src="js/lib/unicorn.js"></script>
+            <script src="js/lib/unicorn.chat.js"></script>
 	</body>
 </html>
