--- a/src/main/webapp/pages/form-wizard.html
+++ b/src/main/webapp/pages/form-wizard.html
@@ -164,12 +164,12 @@
 		
 		
             
-            <script src="js/jquery.min.js"></script>
-            <script src="js/jquery-ui.custom.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/jquery.validate.js"></script>
-            <script src="js/jquery.wizard.js"></script>
-            <script src="js/unicorn.js"></script>
-            <script src="js/unicorn.wizard.js"></script>
+            <script src="js/lib/jquery.min.js"></script>
+            <script src="js/lib/jquery-ui.custom.js"></script>
+            <script src="js/lib/bootstrap.min.js"></script>
+            <script src="js/lib/jquery.validate.js"></script>
+            <script src="js/lib/jquery.wizard.js"></script>
+            <script src="js/lib/unicorn.js"></script>
+            <script src="js/lib/unicorn.wizard.js"></script>
 	</body>
 </html>
