--- a/src/main/webapp/pages/gallery.html
+++ b/src/main/webapp/pages/gallery.html
@@ -273,11 +273,11 @@
 		
 		
             
-            <script src="js/jquery.min.js"></script>
+            <script src="js/lib/jquery.min.js"></script>
             <script src="js/jquery.ui.custom.js"></script>
-            <script src="js/bootstrap.min.js"></script>
-            <script src="js/jquery.masonry.min.js"></script>
-            <script src="js/unicorn.js"></script>
+            <script src="js/lib/bootstrap.min.js"></script>
+            <script src="js/lib/jquery.masonry.min.js"></script>
+            <script src="js/lib/unicorn.js"></script>
             <script>
                 $(function(){
                     $('.gallery-masonry').masonry({
