--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -61,16 +61,16 @@
 		</div>
 
 
-            <script src="js/excanvas.min.js"></script>
-            <script src="js/jquery-3.1.1.min.js"></script>
-            <script src="js/bootstrap-3.3.7.min.js"></script>
-            <script src="js/jquery.flot.min.js"></script>
-            <script src="js/jquery.flot.resize.min.js"></script>
-            <script src="js/jquery.peity.min.js"></script>
-            <script src="js/fullcalendar.min.js"></script>
-            <script src="js/unicorn.js"></script>
-            <script src="js/unicorn.dashboard.js"></script>
-            <script src="js/bootstrap-treeview.min.js"></script>
+            <script src="js/lib/excanvas.min.js"></script>
+            <script src="js/lib/jquery-3.1.1.min.js"></script>
+            <script src="js/lib/bootstrap-3.3.7.min.js"></script>
+            <script src="js/lib/jquery.flot.min.js"></script>
+            <script src="js/lib/jquery.flot.resize.min.js"></script>
+            <script src="js/lib/jquery.peity.min.js"></script>
+            <script src="js/lib/fullcalendar.min.js"></script>
+            <script src="js/lib/unicorn.js"></script>
+            <script src="js/lib/unicorn.dashboard.js"></script>
+            <script src="js/lib/bootstrap-treeview.min.js"></script>
     <script>
         $.post("/adminManage/department/create", {"companyId":"2a14906e-b01a-4d9a-93e4-ac3740bbe33b", "name":"1Node"},
         function(data) {
