--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -9,48 +9,58 @@
         <link rel="stylesheet" href="css/unicorn.login.css" />
     </head>
     <body>
+    <div id="head">
+        <a href="#" >注册</a>
+        <a href="#" >使用手册</a>
+        <a href="#" >关于我们</a>
+        <a href="#" >加入我们</a>
+        </div>
         <div id="logo">
             <img src="img/logo.png" alt="" />
         </div>
-        <div id="loginbox">            
+        <div id="loginbox">
             <form id="loginform" class="form-vertical" action="index.html">
-				<p>Enter username and password to continue.</p>
+				<p>欢迎使用行政管理系统</p>
                 <div class="control-group">
                     <div class="controls">
                         <div class="input-prepend">
-                            <span class="add-on"><i class="icon-user"></i></span><input type="text" placeholder="Username" />
+                            <span class="add-on"><i class="icon-user"></i></span><input type="text" placeholder="用户名" />
                         </div>
                     </div>
                 </div>
                 <div class="control-group">
                     <div class="controls">
                         <div class="input-prepend">
-                            <span class="add-on"><i class="icon-lock"></i></span><input type="password" placeholder="Password" />
+                            <span class="add-on"><i class="icon-lock"></i></span><input type="password" placeholder="密码" />
                         </div>
                     </div>
                 </div>
                 <div class="form-actions">
-                    <span class="pull-left"><a href="#" class="flip-link" id="to-recover">Lost password?</a></span>
+                    <span class="pull-left"><a href="#" class="flip-link" id="to-recover">忘记密码？</a></span>
                     <span class="pull-right"><input type="submit" class="btn btn-inverse" value="Login" /></span>
                 </div>
             </form>
             <form id="recoverform" action="#" class="form-vertical">
-				<p>Enter your e-mail address below and we will send you instructions how to recover a password.</p>
+				<p>找回密码</p>
 				<div class="control-group">
                     <div class="controls">
                         <div class="input-prepend">
-                            <span class="add-on"><i class="icon-envelope"></i></span><input type="text" placeholder="E-mail address" />
+                            <span class="add-on"><i class="icon-user"></i></span><input type="text" placeholder="用户名" />
+                        </div>
+
+                        <div class="input-prepend">
+                            <span class="add-on"><i class="icon-envelope"></i></span><input type="text" placeholder="邮箱" />
                         </div>
                     </div>
                 </div>
                 <div class="form-actions">
-                    <span class="pull-left"><a href="#" class="flip-link" id="to-login">&lt; Back to login</a></span>
+                    <span class="pull-left"><a href="#" class="flip-link" id="to-login">&lt; 返回登录</a></span>
                     <span class="pull-right"><input type="submit" class="btn btn-inverse" value="Recover" /></span>
                 </div>
             </form>
         </div>
-        
-        <script src="js/jquery.min.js"></script>  
-        <script src="js/unicorn.login.js"></script> 
+
+        <script src="js/lib/jquery.min.js"></script>
+        <script src="js/lib/unicorn.login.js"></script>
     </body>
 </html>
