添加登录注册接口

--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Unicorn Admin</title>
+		<title>行政管理系统</title>
 		<meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="css/bootstrap-3.3.7.css" />
@@ -14,7 +14,7 @@
 		
 		
 		<div id="header">
-			<h1><a href="./dashboard.html">Unicorn Admin</a></h1>		
+			<h1><a href="./dashboard.html">行政管理系统</a></h1>
 		</div>
             
 		<div id="sidebar">
@@ -71,11 +71,5 @@
             <script src="js/lib/unicorn.js"></script>
             <script src="js/lib/unicorn.dashboard.js"></script>
             <script src="js/lib/bootstrap-treeview.min.js"></script>
-    <script>
-        $.post("/adminManage/department/create", {"companyId":"2a14906e-b01a-4d9a-93e4-ac3740bbe33b", "name":"1Node"},
-        function(data) {
-
-        });
-    </script>
     </body>
 </html>
