--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -10,7 +10,7 @@
     </head>
     <body>
     <div id="head">
-        <a href="#" >注册</a>
+        <a href="#" id="registerBtn" >注册</a>
         <a href="#" >使用手册</a>
         <a href="#" >关于我们</a>
         <a href="#" >加入我们</a>
@@ -19,35 +19,37 @@
             <img src="img/logo.png" alt="" />
         </div>
         <div id="loginbox">
-            <form id="loginform" class="form-vertical" action="index.html">
+            <form id="loginform" class="form-vertical">
 				<p>欢迎使用行政管理系统</p>
                 <div class="control-group">
                     <div class="controls">
                         <div class="input-prepend">
-                            <span class="add-on"><i class="icon-user"></i></span><input type="text" placeholder="用户名" />
+                            <span class="add-on"><i class="icon-user"></i></span><input id="loginName" type="text" placeholder="用户名" />
                         </div>
                     </div>
                 </div>
                 <div class="control-group">
                     <div class="controls">
                         <div class="input-prepend">
-                            <span class="add-on"><i class="icon-lock"></i></span><input type="password" placeholder="密码" />
+                            <span class="add-on"><i class="icon-lock"></i></span><input id="loginPass" type="password" placeholder="密码" />
                         </div>
                     </div>
                 </div>
                 <div class="form-actions">
-                    <span class="pull-left"><a href="#" class="flip-link" id="to-recover">忘记密码？</a></span>
-                    <span class="pull-right"><input type="submit" class="btn btn-inverse" value="Login" /></span>
+                    <span class="pull-left"><a href="#" class="flip-link" id="to-recover">没有账户？</a></span>
+                    <span class="pull-right"><input type="submit" class="btn btn-inverse" id="loginBtn" value="登录"/></span>
                 </div>
             </form>
-            <form id="recoverform" action="#" class="form-vertical">
-				<p>找回密码</p>
-				<div class="control-group">
+            <form id="registerform" action="#" class="form-vertical">
+				<p>注册账户</p>
+                <div class="control-group">
                     <div class="controls">
                         <div class="input-prepend">
-                            <span class="add-on"><i class="icon-user"></i></span><input type="text" placeholder="用户名" />
+                            <span class="add-on"><i class="icon-user"></i></span><input type="text" placeholder="显示名称" />
+                            <span class="add-on"><i class="icon-user"></i></span><input type="text" placeholder="显示名称" />
                         </div>
-
+                    </div>
+                    <div class="controls">
                         <div class="input-prepend">
                             <span class="add-on"><i class="icon-envelope"></i></span><input type="text" placeholder="邮箱" />
                         </div>
@@ -61,6 +63,6 @@
         </div>
 
         <script src="js/lib/jquery.min.js"></script>
-        <script src="js/lib/unicorn.login.js"></script>
+        <script src="js/login.js"></script>
     </body>
 </html>
