--- a/src/main/webapp/pages/department-create.html
+++ b/src/main/webapp/pages/department-create.html
@@ -4,7 +4,7 @@
     <title>行政管理系统</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap-3.3.7.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/fullcalendar.css" />
     <link rel="stylesheet" href="css/unicorn.main.css" />
@@ -22,8 +22,8 @@
         <li class="submenu active open">
             <a href="#"><i class="icon icon-th-list"></i> <span>部门管理</span></a>
             <ul>
-                <li class="active"><a>部门概览</a></li>
-                <li><a href="department-detail.html">部门明细</a></li>
+                <li><a href="department-overview.html">部门概览</a></li>
+                <li class="active"><a>部门明细</a></li>
             </ul>
         </li>
         <li class="submenu">
@@ -60,18 +60,60 @@
 
 <div id="content">
     <div id="content-header">
-        <h1>部门概览</h1>
-        <div class="btn-group">
-            <button id="createBtn" class="btn btn-success">创建部门</button>
+        <h1>创建部门</h1>
+    </div>
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="widget-box">
+                    <div class="widget-title">
+								<span class="icon">
+									<i class="icon-align-justify"></i>
+								</span>
+                        <h5>部门信息</h5>
+                    </div>
+                    <div class="widget-content nopadding">
+                        <form action="#" method="get" class="form-horizontal">
+                            <div class="control-group">
+                                <label class="control-label">部门名称</label>
+                                <div class="controls">
+                                    <input type="text" />
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label class="control-label">上级部门</label>
+                                <div class="controls">
+                                    <input type="text" />
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label class="control-label">部门主管</label>
+                                <div class="controls">
+                                    <input type="text" />
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label class="control-label">部门简介</label>
+                                <div class="controls">
+                                    <textarea></textarea>
+                                </div>
+                            </div>
+                            <div class="form-actions">
+                                <button type="submit" class="btn btn-primary">确定</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div id="tree"></div>
 </div>
 
 
+
 <script src="js/lib/excanvas.min.js"></script>
-<script src="js/lib/jquery-3.1.1.min.js"></script>
-<script src="js/lib/bootstrap-3.3.7.min.js"></script>
+<script src="js/lib/jquery.min.js"></script>
+<script src="js/lib/bootstrap.min.js"></script>
 <script src="js/lib/jquery.flot.min.js"></script>
 <script src="js/lib/jquery.flot.resize.min.js"></script>
 <script src="js/lib/jquery.peity.min.js"></script>
@@ -79,7 +121,5 @@
 <script src="js/lib/unicorn.js"></script>
 <script src="js/lib/unicorn.dashboard.js"></script>
 <script src="js/lib/bootstrap-treeview.min.js"></script>
-<script src="js/util.js"></script>
-<script src="js/department-overview.js"></script>
 </body>
 </html>
