--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <title>Unicorn Admin</title>
+        <title>行政管理系统</title>
 		<meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -10,7 +10,7 @@
     </head>
     <body>
     <div id="head">
-        <a href="#" id="registerBtn" >注册</a>
+        <a href="#">常见问题</a>
         <a href="#" >使用手册</a>
         <a href="#" >关于我们</a>
         <a href="#" >加入我们</a>
@@ -36,33 +36,39 @@
                     </div>
                 </div>
                 <div class="form-actions">
-                    <span class="pull-left"><a href="#" class="flip-link" id="to-recover">没有账户？</a></span>
-                    <span class="pull-right"><input type="submit" class="btn btn-inverse" id="loginBtn" value="登录"/></span>
+                    <span class="pull-left"><a href="#" class="flip-link" id="to-register">没有账户？</a></span>
+                    <span class="pull-right"><input style="height: 20px;width: 60px" id="loginBtn" class="btn btn-inverse" value="登录"/></span>
                 </div>
             </form>
-            <form id="registerform" action="#" class="form-vertical">
+            <form id="registerform" class="form-vertical">
 				<p>注册账户</p>
                 <div class="control-group">
                     <div class="controls">
                         <div class="input-prepend">
-                            <span class="add-on"><i class="icon-user"></i></span><input type="text" placeholder="显示名称" />
-                            <span class="add-on"><i class="icon-user"></i></span><input type="text" placeholder="显示名称" />
+                            <span class="add-on"><i class="icon-user"></i></span><input id="regName" type="text" placeholder="姓名" />
+                        </div>
+                        <div class="input-prepend">
+                            <span class="add-on"><i class="icon-user"></i></span><input id="idNum" type="text" placeholder="身份证号码" />
                         </div>
                     </div>
                     <div class="controls">
                         <div class="input-prepend">
-                            <span class="add-on"><i class="icon-envelope"></i></span><input type="text" placeholder="邮箱" />
+                            <span class="add-on"><i class="icon-lock"></i></span><input id="regPass" type="password" placeholder="密码" />
+                        </div>
+                        <div class="input-prepend">
+                            <span class="add-on"><i class="icon-lock"></i></span><input id="repPass" type="password" placeholder="重复密码" />
                         </div>
                     </div>
                 </div>
                 <div class="form-actions">
                     <span class="pull-left"><a href="#" class="flip-link" id="to-login">&lt; 返回登录</a></span>
-                    <span class="pull-right"><input type="submit" class="btn btn-inverse" value="Recover" /></span>
+                    <span class="pull-right"><input id="registerBtn" type="submit" class="btn btn-inverse" value="Recover" /></span>
                 </div>
             </form>
         </div>
 
         <script src="js/lib/jquery.min.js"></script>
+        <script src="js/util.js"></script>
         <script src="js/login.js"></script>
     </body>
 </html>
