--- a/src/main/webapp/pages/department-overview.html
+++ b/src/main/webapp/pages/department-overview.html
@@ -24,6 +24,7 @@
             <ul>
                 <li class="active"><a>部门概览</a></li>
                 <li><a href="department-detail.html">部门明细</a></li>
+                <li><a href="department-create.html">创建部门</a></li>
             </ul>
         </li>
         <li class="submenu">
@@ -62,7 +63,7 @@
     <div id="content-header">
         <h1>部门概览</h1>
         <div class="btn-group">
-            <button id="createBtn" class="btn btn-success">创建部门</button>
+            <a href="department-create.html" id="createBtn" class="btn btn-success">创建部门</a>
         </div>
     </div>
     <div id="tree"></div>
