--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="form-actions">
                     <span class="pull-left"><a href="#" class="flip-link" id="to-login">&lt; 返回登录</a></span>
-                    <span class="pull-right"><input id="registerBtn" type="submit" class="btn btn-inverse" value="Recover" /></span>
+                    <span class="pull-right"><input id="registerBtn" type="submit" class="btn btn-inverse" value="确认" /></span>
                 </div>
             </form>
         </div>
