修复返回中文字符串乱码问题

--- a/src/main/webapp/pages/department-detail.html
+++ b/src/main/webapp/pages/department-detail.html
@@ -75,5 +75,7 @@
 <script src="js/lib/unicorn.js"></script>
 <script src="js/lib/unicorn.dashboard.js"></script>
 <script src="js/lib/bootstrap-treeview.min.js"></script>
+<script src="js/util.js"></script>
+<script src="js/department-detail.js"></script>
 </body>
 </html>
