实现部门细节查看

--- a/src/main/webapp/pages/department-create.html
+++ b/src/main/webapp/pages/department-create.html
@@ -84,13 +84,15 @@
                             <div class="control-group">
                                 <label class="control-label">上级部门</label>
                                 <div class="controls">
-                                    <input id="parentDpm" type="text" />
+                                    <select id="dpmSelect">
+                                    </select>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label class="control-label">部门主管</label>
                                 <div class="controls">
-                                    <input id="ownerId" type="text" />
+                                    <select id="ownerSelect">
+                                    </select>
                                 </div>
                             </div>
                             <div class="control-group">
@@ -113,8 +115,8 @@
 
 
 <script src="js/lib/excanvas.min.js"></script>
-<script src="js/lib/jquery.min.js"></script>
-<script src="js/lib/bootstrap.min.js"></script>
+<script src="js/lib/jquery-3.1.1.min.js"></script>
+<script src="js/lib/bootstrap-3.3.7.min.js"></script>
 <script src="js/lib/jquery.flot.min.js"></script>
 <script src="js/lib/jquery.flot.resize.min.js"></script>
 <script src="js/lib/jquery.peity.min.js"></script>
