--- a/src/main/webapp/pages/department-detail.html
+++ b/src/main/webapp/pages/department-detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Unicorn Admin</title>
+    <title>行政管理系统</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap-3.3.7.css" />
@@ -14,7 +14,7 @@
 
 
 <div id="header">
-    <h1><a href="./dashboard.html">Unicorn Admin</a></h1>
+    <h1><a href="./dashboard.html">行政管理系统</a></h1>
 </div>
 
 <div id="sidebar">
@@ -24,6 +24,7 @@
             <ul>
                 <li><a href="department-overview.html">部门概览</a></li>
                 <li class="active"><a>部门明细</a></li>
+                <li><a href="department-create.html">创建部门</a></li>
             </ul>
         </li>
         <li class="submenu">
@@ -61,6 +62,40 @@
 <div id="content">
     <div id="content-header">
         <h1>部门明细</h1>
+    </div>
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="widget-box">
+                    <div class="widget-title">
+								<span class="icon">
+									<i class="icon-align-justify"></i>
+								</span>
+                        <h5>部门信息</h5>
+                    </div>
+                    <div class="widget-content">
+                        <form action="#" method="get" class="form-horizontal">
+                            <p class="amount-word">
+                                部门名称:
+                                <span id="dpmName">部门名称</span>
+                            </p>
+                            <p class="amount-word">
+                                上级部门:
+                                <span><a href="" id="parentId">上级部门</a></span>
+                            </p>
+                            <p class="amount-word">
+                                部门主管:
+                                <span><a href="" id="ownerId">部门主管</a></span>
+                            </p>
+                            <p class="amount-word">
+                                部门简介:
+                                <span id="introduce">部门简介</span>
+                            </p>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
