--- a/src/main/webapp/pages/department-create.html
+++ b/src/main/webapp/pages/department-create.html
@@ -38,7 +38,7 @@
         <li class="submenu">
             <a href="#"><i class="icon icon-th-list"></i> <span>人员管理</span></a>
             <ul>
-                <li><a href="">人员概览</a></li>
+                <li><a href="user-create.html">添加员工</a></li>
             </ul>
         </li>
         <li class="submenu">
