--- a/src/main/webapp/pages/user-create.html
+++ b/src/main/webapp/pages/user-create.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title>行政管理系统</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap-3.3.7.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/fullcalendar.css" />
     <link rel="stylesheet" href="css/unicorn.main.css" />
@@ -19,11 +19,11 @@
 
 <div id="sidebar">
     <ul>
-        <li class="submenu active open">
+        <li class="submenu">
             <a href="#"><i class="icon icon-th-list"></i> <span>部门管理</span></a>
             <ul>
                 <li><a href="department-overview.html">部门概览</a></li>
-                <li class="active"><a>部门明细</a></li>
+                <li><a href="department-detail.html">部门明细</a></li>
                 <li><a href="department-create.html">创建部门</a></li>
             </ul>
         </li>
@@ -35,10 +35,10 @@
                 <li><a href="">我的项目</a></li>
             </ul>
         </li>
-        <li class="submenu">
+        <li class="submenu active open">
             <a href="#"><i class="icon icon-th-list"></i> <span>人员管理</span></a>
             <ul>
-                <li><a href="user-create.html">添加员工</a></li>
+                <li class="active"><a href="user-create.html">添加员工</a></li>
             </ul>
         </li>
         <li class="submenu">
@@ -61,7 +61,7 @@
 
 <div id="content">
     <div id="content-header">
-        <h1>部门明细</h1>
+        <h1>添加员工</h1>
     </div>
     <div class="container-fluid">
         <div class="row-fluid">
@@ -71,26 +71,56 @@
 								<span class="icon">
 									<i class="icon-align-justify"></i>
 								</span>
-                        <h5>部门信息</h5>
+                        <h5>人员信息</h5>
                     </div>
-                    <div class="widget-content">
+                    <div class="widget-content nopadding">
                         <form action="#" method="get" class="form-horizontal">
-                            <p class="amount-word">
-                                部门名称:
-                                <span id="dpmName">部门名称</span>
-                            </p>
-                            <p class="amount-word">
-                                上级部门:
-                                <span><a href="" id="parentId">上级部门</a></span>
-                            </p>
-                            <p class="amount-word">
-                                部门主管:
-                                <span><a href="" id="ownerId">部门主管</a></span>
-                            </p>
-                            <p class="amount-word">
-                                部门简介:
-                                <span id="introduce">部门简介</span>
-                            </p>
+                            <div class="control-group">
+                                <label class="control-label">姓名</label>
+                                <div class="controls">
+                                    <input id="displayName" type="text" />
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label class="control-label">身份证号码</label>
+                                <div class="controls">
+                                    <input id="cardId" type="text" />
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label class="control-label">所属部门</label>
+                                <div class="controls">
+                                    <select id="dpmSelect">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label class="control-label">工号</label>
+                                <div class="controls">
+                                    <input id="workNum" type="text" />
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label class="control-label">联系号码</label>
+                                <div class="controls">
+                                    <input id="phone" type="text" />
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label class="control-label">联系邮箱</label>
+                                <div class="controls">
+                                    <input id="email" type="text" />
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label class="control-label">人员简历</label>
+                                <div class="controls">
+                                    <textarea id="history"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-actions">
+                                <button type="submit" class="btn btn-primary" onclick="sureBtn()">确定</button>
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -98,6 +128,7 @@
         </div>
     </div>
 </div>
+
 
 
 <script src="js/lib/excanvas.min.js"></script>
@@ -111,6 +142,6 @@
 <script src="js/lib/unicorn.dashboard.js"></script>
 <script src="js/lib/bootstrap-treeview.min.js"></script>
 <script src="js/util.js"></script>
-<script src="js/department-detail.js"></script>
+<script src="js/user-create.js"></script>
 </body>
 </html>
