--- a/src/main/webapp/pages/department-overview.html
+++ b/src/main/webapp/pages/department-overview.html
@@ -31,7 +31,7 @@
             <a href="#"><i class="icon icon-th-list"></i> <span>项目管理</span></a>
             <ul>
                 <li><a href="">项目概览</a></li>
-                <li><a href="">创建项目</a></li>
+                <li><a href="project-create.html">创建项目</a></li>
                 <li><a href="">我的项目</a></li>
             </ul>
         </li>
