中期答辩版本1

--- a/src/main/webapp/pages/department-overview.html
+++ b/src/main/webapp/pages/department-overview.html
@@ -30,7 +30,7 @@
         <li class="submenu">
             <a href="#"><i class="icon icon-th-list"></i> <span>项目管理</span></a>
             <ul>
-                <li><a href="">项目概览</a></li>
+                <li><a href="project-overview.html">项目概览</a></li>
                 <li><a href="project-create.html">创建项目</a></li>
                 <li><a href="">我的项目</a></li>
             </ul>
@@ -53,6 +53,13 @@
             <ul>
                 <li><a href="">我的会议</a></li>
                 <li><a href="">发起会议</a></li>
+            </ul>
+        </li>
+        <li class="submenu">
+            <a href="#"><i class="icon icon-th-list"></i> <span>物资管理</span> <span class="label">3</span></a>
+            <ul>
+                <li><a href="">物资申请</a></li>
+                <li><a href="">物资审批</a></li>
             </ul>
         </li>
     </ul>
