--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -16,7 +16,7 @@
         <a href="#" >加入我们</a>
         </div>
         <div id="logo">
-            <img src="img/logo.png" alt="" />
+            <img src="" alt="" />
         </div>
         <div id="loginbox">
             <form id="loginform" class="form-vertical">
