--- a/src/main/webapp/pages/project-create.html
+++ b/src/main/webapp/pages/project-create.html
@@ -7,15 +7,24 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/jquery-ui.css" />
-    <link rel="stylesheet" href="css/fullcalendar.css" />
+    <link rel="stylesheet" href="css/multi-select.css" />
     <link rel="stylesheet" href="css/unicorn.main.css" />
     <link rel="stylesheet" href="css/unicorn.grey.css" class="skin-color" />
+
+    <!--<link rel="stylesheet" href="css/bootstrap.min.css" />-->
+    <!--<link rel="stylesheet" href="css/bootstrap-responsive.min.css" />-->
+    <!--<link rel="stylesheet" href="css/colorpicker.css" />-->
+    <!--<link rel="stylesheet" href="css/datepicker.css" />-->
+    <!--<link rel="stylesheet" href="css/uniform.css" />-->
+    <!--<link rel="stylesheet" href="css/select2.css" />-->
+    <!--<link rel="stylesheet" href="css/unicorn.main.css" />-->
+    <!--<link rel="stylesheet" href="css/unicorn.grey.css" class="skin-color" />-->
 </head>
 <body>
 
 
 <div id="header">
-    <h1><a href="./dashboard.html">行政管理系统</a></h1>
+    <h1><a>行政管理系统</a></h1>
 </div>
 
 <div id="sidebar">
@@ -31,8 +40,8 @@
         <li class="submenu active open">
             <a href="#"><i class="icon icon-th-list"></i> <span>项目管理</span></a>
             <ul>
-                <li><a href="">项目概览</a></li>
-                <li class="active"><a href="">创建项目</a></li>
+                <li><a href="project-overview.html">项目概览</a></li>
+                <li class="active"><a href="project-create.html">创建项目</a></li>
                 <li><a>我的项目</a></li>
             </ul>
         </li>
@@ -56,13 +65,20 @@
                 <li><a href="">发起会议</a></li>
             </ul>
         </li>
+        <li class="submenu">
+            <a href="#"><i class="icon icon-th-list"></i> <span>物资管理</span> <span class="label">3</span></a>
+            <ul>
+                <li><a href="">物资申请</a></li>
+                <li><a href="">物资审批</a></li>
+            </ul>
+        </li>
     </ul>
 
 </div>
 
 <div id="content">
     <div id="content-header">
-        <h1>创建部门</h1>
+        <h1>创建项目</h1>
     </div>
     <div class="container-fluid">
         <div class="row-fluid">
@@ -72,12 +88,12 @@
 								<span class="icon">
 									<i class="icon-align-justify"></i>
 								</span>
-                        <h5>部门信息</h5>
+                        <h5>项目信息</h5>
                     </div>
                     <div class="widget-content nopadding">
                         <form action="#" method="get" class="form-horizontal">
                             <div class="control-group">
-                                <label class="control-label">部门名称</label>
+                                <label class="control-label">项目名称</label>
                                 <div class="controls">
                                     <input id="name" type="text" />
                                 </div>
@@ -93,6 +109,16 @@
                                 <label class="control-label">项目主管</label>
                                 <div class="controls">
                                     <select id="ownerSelect">
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <label class="control-label">项目人员</label>
+                                <div class="controls">
+                                    <select multiple="multiple" id="persons">
+                                        <option value='文峰'>文峰</option>
+                                        <option value='纵柯'>纵柯</option>
+                                        <option value='李杰'>李杰</option>
                                     </select>
                                 </div>
                             </div>
@@ -137,6 +163,7 @@
 <script src="js/lib/fullcalendar.min.js"></script>
 <script src="js/lib/unicorn.js"></script>
 <script src="js/lib/unicorn.dashboard.js"></script>
+<script src="js/lib/jquery.multi-select.js"></script>
 <script src="js/lib/bootstrap-treeview.min.js"></script>
 <script src="js/util.js"></script>
 <script src="js/project-create.js"></script>
