--- a/src/main/webapp/pages/project-overview.html
+++ b/src/main/webapp/pages/project-overview.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
+    <link rel="stylesheet" href="css/jquery-ui.css" />
     <link rel="stylesheet" href="css/fullcalendar.css" />
     <link rel="stylesheet" href="css/unicorn.main.css" />
     <link rel="stylesheet" href="css/unicorn.grey.css" class="skin-color" />
@@ -19,20 +20,20 @@
 
 <div id="sidebar">
     <ul>
-        <li class="submenu active open">
+        <li class="submenu">
             <a href="#"><i class="icon icon-th-list"></i> <span>部门管理</span></a>
             <ul>
                 <li><a href="department-overview.html">部门概览</a></li>
-                <li ><a href="department-detail.html">部门明细</a></li>
-                <li class="active"><a>创建部门</a></li>
+                <li><a href="department-detail.html">部门明细</a></li>
+                <li><a>创建部门</a></li>
             </ul>
         </li>
-        <li class="submenu">
+        <li class="submenu active open">
             <a href="#"><i class="icon icon-th-list"></i> <span>项目管理</span></a>
             <ul>
-                <li><a href="project-overview.html">项目概览</a></li>
+                <li class="active"><a href="project-overview.html">项目概览</a></li>
                 <li><a href="project-create.html">创建项目</a></li>
-                <li><a href="">我的项目</a></li>
+                <li><a>我的项目</a></li>
             </ul>
         </li>
         <li class="submenu">
@@ -68,7 +69,7 @@
 
 <div id="content">
     <div id="content-header">
-        <h1>创建部门</h1>
+        <h1>项目概览</h1>
     </div>
     <div class="container-fluid">
         <div class="row-fluid">
@@ -78,40 +79,21 @@
 								<span class="icon">
 									<i class="icon-align-justify"></i>
 								</span>
-                        <h5>部门信息</h5>
+                        <h5>项目列表</h5>
                     </div>
                     <div class="widget-content nopadding">
-                        <form action="#" method="get" class="form-horizontal">
-                            <div class="control-group">
-                                <label class="control-label">部门名称</label>
-                                <div class="controls">
-                                    <input id="dpmName" type="text" />
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <label class="control-label">上级部门</label>
-                                <div class="controls">
-                                    <select id="dpmSelect">
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <label class="control-label">部门主管</label>
-                                <div class="controls">
-                                    <select id="ownerSelect">
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <label class="control-label">部门简介</label>
-                                <div class="controls">
-                                    <textarea id="introduce"></textarea>
-                                </div>
-                            </div>
-                            <div class="form-actions">
-                                <button type="submit" class="btn btn-primary" onclick="sureBtn()">确定</button>
-                            </div>
-                        </form>
+                        <table class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>项目名称</th>
+                                <th>所属部门</th>
+                                <th>项目主管</th>
+                                <th>项目状态</th>
+                            </tr>
+                            </thead>
+                            <tbody id="tableBody">
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
@@ -127,11 +109,12 @@
 <script src="js/lib/jquery.flot.min.js"></script>
 <script src="js/lib/jquery.flot.resize.min.js"></script>
 <script src="js/lib/jquery.peity.min.js"></script>
+<script src="js/lib/jquery-ui.custom.js"></script>
 <script src="js/lib/fullcalendar.min.js"></script>
 <script src="js/lib/unicorn.js"></script>
 <script src="js/lib/unicorn.dashboard.js"></script>
 <script src="js/lib/bootstrap-treeview.min.js"></script>
 <script src="js/util.js"></script>
-<script src="js/department-create.js"></script>
+<script src="js/project-overview.js"></script>
 </body>
 </html>
