--- a/src/main/webapp/pages/user-detail.html
+++ b/src/main/webapp/pages/user-detail.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>行政管理系统</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-3.3.7.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/fullcalendar.css" />
     <link rel="stylesheet" href="css/unicorn.main.css" />
@@ -19,12 +19,12 @@
 
 <div id="sidebar">
     <ul>
-        <li class="submenu active open">
+        <li class="submenu">
             <a href="#"><i class="icon icon-th-list"></i> <span>部门管理</span></a>
             <ul>
                 <li><a href="department-overview.html">部门概览</a></li>
-                <li ><a href="department-detail.html">部门明细</a></li>
-                <li class="active"><a>创建部门</a></li>
+                <li><a>部门明细</a></li>
+                <li><a href="department-create.html">创建部门</a></li>
             </ul>
         </li>
         <li class="submenu">
@@ -35,9 +35,10 @@
                 <li><a href="">我的项目</a></li>
             </ul>
         </li>
-        <li class="submenu">
+        <li class="submenu active open">
             <a href="#"><i class="icon icon-th-list"></i> <span>人员管理</span></a>
             <ul>
+                <li class="active"><a href="user-detail.html">人员查询</a></li>
                 <li><a href="user-create.html">添加员工</a></li>
             </ul>
         </li>
@@ -68,7 +69,7 @@
 
 <div id="content">
     <div id="content-header">
-        <h1>创建部门</h1>
+        <h1>人员查询</h1>
     </div>
     <div class="container-fluid">
         <div class="row-fluid">
@@ -78,39 +79,35 @@
 								<span class="icon">
 									<i class="icon-align-justify"></i>
 								</span>
-                        <h5>部门信息</h5>
+                        <h5>人员信息</h5>
                     </div>
-                    <div class="widget-content nopadding">
+                    <div class="widget-content">
                         <form action="#" method="get" class="form-horizontal">
-                            <div class="control-group">
-                                <label class="control-label">部门名称</label>
-                                <div class="controls">
-                                    <input id="dpmName" type="text" />
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <label class="control-label">上级部门</label>
-                                <div class="controls">
-                                    <select id="dpmSelect">
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <label class="control-label">部门主管</label>
-                                <div class="controls">
-                                    <select id="ownerSelect">
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <label class="control-label">部门简介</label>
-                                <div class="controls">
-                                    <textarea id="introduce"></textarea>
-                                </div>
-                            </div>
-                            <div class="form-actions">
-                                <button type="submit" class="btn btn-primary" onclick="sureBtn()">确定</button>
-                            </div>
+                            <p class="amount-word">
+                                姓名:
+                                <span id="displayName">姓名</span>
+                            </p>
+                            <p class="amount-word">
+                                部门:
+                                <span><a href="" id="dpm">部门</a></span>
+                            </p>
+                            <p class="amount-word">
+                                联系电话:
+                                <span><a href="" id="phone">联系电话</a></span>
+                            </p>
+                            <p class="amount-word">
+                                联系邮箱:
+                                <span id="email">联系邮箱</span>
+                            </p>
+                            <p class="amount-word">
+                                个性简历
+                                <span id="introduce">个性简历</span>
+                            </p>
+                            <p class="amount-word">
+                                项目经历
+                                <span id="projects">
+                                </span>
+                            </p>
                         </form>
                     </div>
                 </div>
@@ -118,7 +115,6 @@
         </div>
     </div>
 </div>
-
 
 
 <script src="js/lib/excanvas.min.js"></script>
@@ -132,6 +128,6 @@
 <script src="js/lib/unicorn.dashboard.js"></script>
 <script src="js/lib/bootstrap-treeview.min.js"></script>
 <script src="js/util.js"></script>
-<script src="js/department-create.js"></script>
+<script src="js/user-detail.js"></script>
 </body>
 </html>
