中期答辩演示版本3

--- a/src/main/webapp/pages/department-detail.html
+++ b/src/main/webapp/pages/department-detail.html
@@ -32,12 +32,13 @@
             <ul>
                 <li><a href="project-overview.html">项目概览</a></li>
                 <li><a href="project-create.html">创建项目</a></li>
-                <li><a href="">我的项目</a></li>
+                <li><a href="project-detail.html">项目明细</a></li>
             </ul>
         </li>
         <li class="submenu">
             <a href="#"><i class="icon icon-th-list"></i> <span>人员管理</span></a>
             <ul>
+                <li><a href="user-detail.html">人员查询</a></li>
                 <li><a href="user-create.html">添加员工</a></li>
             </ul>
         </li>
