--- a/src/main/webapp/pages/user-detail.html
+++ b/src/main/webapp/pages/user-detail.html
@@ -32,7 +32,7 @@
             <ul>
                 <li><a href="project-overview.html">项目概览</a></li>
                 <li><a href="project-create.html">创建项目</a></li>
-                <li><a href="">我的项目</a></li>
+                <li><a href="project-detail.html">项目明细</a></li>
             </ul>
         </li>
         <li class="submenu active open">
