--- a/src/main/webapp/pages/project-detail.html
+++ b/src/main/webapp/pages/project-detail.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>行政管理系统</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-3.3.7.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/fullcalendar.css" />
     <link rel="stylesheet" href="css/unicorn.main.css" />
@@ -19,20 +19,20 @@
 
 <div id="sidebar">
     <ul>
-        <li class="submenu active open">
+        <li class="submenu">
             <a href="#"><i class="icon icon-th-list"></i> <span>部门管理</span></a>
             <ul>
                 <li><a href="department-overview.html">部门概览</a></li>
-                <li ><a href="department-detail.html">部门明细</a></li>
-                <li class="active"><a>创建部门</a></li>
+                <li><a>部门明细</a></li>
+                <li><a href="department-create.html">创建部门</a></li>
             </ul>
         </li>
-        <li class="submenu">
+        <li class="submenu active open">
             <a href="#"><i class="icon icon-th-list"></i> <span>项目管理</span></a>
             <ul>
                 <li><a href="project-overview.html">项目概览</a></li>
                 <li><a href="project-create.html">创建项目</a></li>
-                <li><a href="project-detail.html">项目明细</a></li>
+                <li class="active"><a href="project-detail.html">项目明细</a></li>
             </ul>
         </li>
         <li class="submenu">
@@ -69,7 +69,7 @@
 
 <div id="content">
     <div id="content-header">
-        <h1>创建部门</h1>
+        <h1>项目信息</h1>
     </div>
     <div class="container-fluid">
         <div class="row-fluid">
@@ -79,39 +79,57 @@
 								<span class="icon">
 									<i class="icon-align-justify"></i>
 								</span>
-                        <h5>部门信息</h5>
+                        <h5>项目信息</h5>
                     </div>
-                    <div class="widget-content nopadding">
+                    <div class="widget-content">
                         <form action="#" method="get" class="form-horizontal">
-                            <div class="control-group">
-                                <label class="control-label">部门名称</label>
-                                <div class="controls">
-                                    <input id="dpmName" type="text" />
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <label class="control-label">上级部门</label>
-                                <div class="controls">
-                                    <select id="dpmSelect">
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <label class="control-label">部门主管</label>
-                                <div class="controls">
-                                    <select id="ownerSelect">
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <label class="control-label">部门简介</label>
-                                <div class="controls">
-                                    <textarea id="introduce"></textarea>
-                                </div>
-                            </div>
-                            <div class="form-actions">
-                                <button type="submit" class="btn btn-primary" onclick="sureBtn()">确定</button>
-                            </div>
+                            <p class="amount-word">
+                                项目名称:
+                                <span id="name">项目名称</span>
+                            </p>
+                            <p class="amount-word">
+                                所属部门:
+                                <span><a href="" id="dpm">所属部门</a></span>
+                            </p>
+                            <p class="amount-word">
+                                项目主管:
+                                <span><a href="" id="owner">项目主管</a></span>
+                            </p>
+                            <p class="amount-word">
+                                项目组员：
+                                <span id="persons">
+                                </span>
+                            </p>
+                            <p class="amount-word">
+                                起始日期:
+                                <span id="startDate">起始时间</span>
+                            </p>
+                            <p class="amount-word">
+                                计划终止日期：
+                                <span id="endDate">终止时间</span>
+                            </p>
+                            <p class="amount-word">
+                                项目状态：
+                                <span id="status">
+                                </span>
+                            </p>
+                            <p class="amount-word">
+                                会议记录：
+                                <span id="meeting">
+                                    <a href="">项目启动</a>
+                                    <a href="">项目方案评审</a>
+                                    <a href="">项目进展报告</a>
+                                    <a href="">项目总结</a>
+                                </span>
+                            </p>
+                            <p class="amount-word">
+                                物资使用记录：
+                                <span id="wuzi">
+                                    <a href="">服务器3台</a>
+                                    <a href="">2T硬盘</a>
+                                    <a href="">NVIDIA-M60显卡租用</a>
+                                </span>
+                            </p>
                         </form>
                     </div>
                 </div>
@@ -119,7 +137,6 @@
         </div>
     </div>
 </div>
-
 
 
 <script src="js/lib/excanvas.min.js"></script>
@@ -133,6 +150,6 @@
 <script src="js/lib/unicorn.dashboard.js"></script>
 <script src="js/lib/bootstrap-treeview.min.js"></script>
 <script src="js/util.js"></script>
-<script src="js/department-create.js"></script>
+<script src="js/project-detail.js"></script>
 </body>
 </html>
