中期演示版本4

--- a/src/main/webapp/pages/user-detail.html
+++ b/src/main/webapp/pages/user-detail.html
@@ -88,6 +88,10 @@
                                 <span id="displayName">姓名</span>
                             </p>
                             <p class="amount-word">
+                                工号:
+                                <span id="workNum">工号</span>
+                            </p>
+                            <p class="amount-word">
                                 部门:
                                 <span><a href="" id="dpm">部门</a></span>
                             </p>
