项目模块深入细化1

--- a/src/main/webapp/pages/sidebar.html
+++ b/src/main/webapp/pages/sidebar.html
@@ -1,19 +1,19 @@
 <div id="sidebar">
     <ul>
-        <li class="submenu" id="side-department">
+        <li class="submenu" id="department_li">
             <a href="#"><i class="icon icon-th-list"></i> <span>部门管理</span></a>
             <ul>
-                <li><a href="department-overview.html">部门概览</a></li>
-                <li><a href="department-detail.html">部门明细</a></li>
-                <li><a>创建部门</a></li>
+                <li id="department_overview_li" ><a href="department-overview.html">部门概览</a></li>
+                <li id="department_detail_li"><a href="department-detail.html">部门明细</a></li>
+                <li id="department_create_li"><a>创建部门</a></li>
             </ul>
         </li>
-        <li class="submenu active open">
+        <li class="submenu" id="project_li">
             <a href="#"><i class="icon icon-th-list"></i> <span>项目管理</span></a>
             <ul>
                 <li><a href="project-overview.html">项目概览</a></li>
-                <li class="active"><a href="project-create.html">创建项目</a></li>
-                <li><a href="project-detail.html">项目明细</a></li>
+                <li><a href="project-create.html">创建项目</a></li>
+                <li id="project_detail_li"><a href="project-detail.html">项目明细</a></li>
             </ul>
         </li>
         <li class="submenu">
@@ -21,13 +21,6 @@
             <ul>
                 <li><a href="user-detail.html">人员查询</a></li>
                 <li><a href="user-create.html">添加员工</a></li>
-            </ul>
-        </li>
-        <li class="submenu">
-            <a href="#"><i class="icon icon-th-list"></i> <span>考勤管理</span> <span class="label">3</span></a>
-            <ul>
-                <li><a href="">请假申请</a></li>
-                <li><a href="">请假审批</a></li>
             </ul>
         </li>
         <li class="submenu">
